--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="React JS | React JS, a javascript Library" />
     <meta property="og:description" content=" " />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://iyrix.com/assets/img/social-media-sharing.png" />
+    <meta property="og:image" content="https://iyrix.com/assets/img/react-js-sharing.png" />
 
     <!-- Adding Canonical Tag -->
     <link rel="canonical" href="https://iyrix.com/" />
@@ -23,7 +23,7 @@
     <!-- Twitter Cards -->
     <meta name="twitter:card"
         content="React JS is the javascript library maintained by React JS developers of facebook.">
-    <meta name="twitter:image" content="https://iyrix.com/assets/img/social-media-sharing.png">
+    <meta name="twitter:image" content="https://iyrix.com/assets/img/react-js-sharing.png">
     <meta name="twitter:site" content="@iyrix.com">
     <meta name="twitter:title" content="React JS | React JS, a javascript Library">
     <meta name="twitter:description" content=" ">
@@ -78,10 +78,11 @@
         <section class="page-header page-header-classic page-header-md p-lg-4 p-md-4 p-lg-3 p-md-4 p-sm-2">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-2">
-                        <a class="text-decoration-none" href="index"><span
-                         class="highlighted-word highlighted-word-animation-1 text-color-success font-weight-semibold text-5 text-sm-5 text-md-6 text-lg-7 mx-3 ">Reactif</span>
-                   </a> 
+                    <div class="col-2 py-sm-1 py-md-0">
+                        <a href="index">
+                            <img alt="React JS" width="100" data-sticky-width="82" data-sticky-height="20"
+                                src="assets/img/logo.png">
+                        </a>
                    </div>
                     <div class="col-10 text-center">
                         <p class="mb-0 text-color-light line-height-5">
