--- a/public/reasons-why-choose-react-js.html
+++ b/public/reasons-why-choose-react-js.html
@@ -17,7 +17,7 @@
       <meta property="og:description"
             content="ReactJS is a JavaScript library this is open supply and maintained with the aid of using the well-known corporation Facebook in conjunction with a developers’ community." />
       <meta property="og:type" content="website" />
-      <meta property="og:image" content="https://iyrix.com/assets/img/7 Reasons why choose ReactJS title.png" />
+      <meta property="og:image" content="https://iyrix.com/assets/img/react-js-sharing.png" />
 
       <!-- Adding Canonical Tag -->
       <link rel="canonical" href="https://iyrix.com/blog/artificial-intelligence/artificial-intelligence" />
@@ -27,7 +27,7 @@
       <!-- Twitter Cards -->
       <meta name="twitter:card"
             content="Top companies produce top content like - Reactif - ReactJS">
-      <meta name="twitter:image" content="https://iyrix.com/assets/img/7 Reasons why choose ReactJS title.png">
+      <meta name="twitter:image" content="https://iyrix.com/assets/img/react-js-sharing.png">
       <meta name="twitter:site" content="@iyrix.com">
       <meta name="twitter:title" content="7 Reasons why choose ReactJS">
       <meta name="twitter:description"
@@ -85,13 +85,14 @@
             <section class="page-header page-header-classic page-header-md p-lg-4 p-md-4 p-lg-3 p-md-4 p-sm-2">
                   <div class="container">
                         <div class="row align-items-center">
-                              <div class="col-2">
-                                    <a class="text-decoration-none" href="index"><span
-                                                class="highlighted-word highlighted-word-animation-1 text-color-success font-weight-semibold text-5 text-sm-5 text-md-6 text-lg-7 mx-3 ">Reactif</span>
-                                    </a>
+                              <div class="col-2 py-sm-1 py-md-0">
+                                    <a href="index">
+                                          <img alt="React JS" width="100" data-sticky-width="82" data-sticky-height="20"
+                                              src="assets/img/logo.png">
+                                      </a>
                               </div>
-                              <div class="col-10 text-center">
-                                    <p class="mb-0 text-color-light line-height-5">
+                              <div class="col-10 d-none d-md-block">
+                                    <p class="mb-0 text-color-light line-height-5 text-lg-3 text-md-3 text-sm-2 text-xs-2">
                                           The fastest way to grow your business with top ranked sites in <span
                                                 class="highlighted-word highlighted-word-animation-1 text-color-success font-weight-semibold text-5 text-sm-5 text-md-6 text-lg-7 mx-3 ">Technology</span>
                                           <span>Feel free to contact us for the better publicity of your business</span>
