one more blog updated

--- a/public/reasons-why-choose-react-js.html
+++ b/public/reasons-why-choose-react-js.html
@@ -50,16 +50,7 @@
             onload="this.onload=null;this.rel='stylesheet'" />
       <link rel="preload" href="assets/vendor/fontawesome-free/css/all.min.css" as="style"
             onload="this.onload=null;this.rel='stylesheet'" />
-      <link rel="preload" href="assets/vendor/magnific-popup/magnific-popup.min.css" as="style"
-            onload="this.onload=null;this.rel='stylesheet'" />
-      <link rel="preload" href="assets/vendor/bootstrap-star-rating/css/star-rating.min.css" as="style"
-            onload="this.onload=null;this.rel='stylesheet'" />
-      <link rel="stylesheet" href="assets/vendor/animate/animate.compat.css">
       <link rel="stylesheet" href="assets/vendor/simple-line-icons/css/simple-line-icons.min.css">
-      <link rel="stylesheet" href="assets/vendor/owl.carousel/assets/owl.carousel.min.css">
-      <link rel="stylesheet" href="assets/vendor/owl.carousel/assets/owl.theme.default.min.css">
-      <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
       <!-- Theme CSS -->
       <link rel="preload" href="assets/css/theme-elements.css" as="style"
@@ -68,15 +59,9 @@
       <!-- Skin CSS -->
       <link rel="preload" href="assets/css/skins/default.css" as="style"
             onload="this.onload=null;this.rel='stylesheet'" />
-      <link rel="preload" href="assets/css/custom.css" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-
-      <!-- Head Libs -->
-      <script src="assets/vendor/modernizr/modernizr.min.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
       <!-- Google Analytics and Layouts Common Files -->
       <script src="assets/layouts/google-analytics.js"></script>
-      <script src="assets/layouts/layouts.js"></script>
 
 </head>
 
@@ -102,8 +87,17 @@
                                     target="_blank">Contact US</a> -->
                                     </p>
                               </div>
+                              <div class="col-10 d-block d-md-none">
+                                <p class="mx-5 mb-0 text-color-light line-height-5 text-lg-3 text-md-3 text-sm-2 text-xs-2">
+                                      <span class="">Feel free to contact us for the better publicity of your business</span>
+                                      <!-- <a
+                                href="contact-us"
+                                class="btn btn-outline btn-success font-weight-bold text-2 text-uppercase mx-3"
+                                target="_blank">Contact US</a> -->
+                                </p>
+                          </div>
                         </div>
-
+    
                   </div>
             </section>
       </div>
@@ -123,13 +117,6 @@
                                                       <div class="post-meta mb-0">
                                                             <span><i class="far fa-user"></i>
                                                                   By Writers</span>
-                                                            /
-                                                            <span class="font-weight-normal">May
-                                                                  20,
-                                                                  2022</span> /
-
-                                                            <!-- <span><i class="far fa-comments"></i> <a >12 Comments</a></span> / -->
-                                                            <span>569 Views</span>
                                                       </div>
                                                       <div class="post-image ms-0 mb-2 mt-2">
                                                             <img src="assets/img/why-choose-react-js.png"
@@ -138,29 +125,6 @@
                                                                   title="Reasons why choose ReactJS" />
 
                                                       </div>
-                                                      <!-- <div  style=" display: block;
-                                                      position: fixed;
-                                                      bottom: 400px;
-                                                      right: 60px;
-                                                      z-index: 1000;">
-                                                      <h6 class="font-weight-semibold text-lg-5 mt-3">
-                                                            SHARE</h6>
-                                                            <ul class="social-network1 social-circle">
-                                                                  <li><a href="#" class="icoFacebook fb-share"
-                                                                              title="Facebook"><i
-                                                                                    class="fa fa-facebook"></i></a>
-                                                                  </li>
-                                                                  <li><a href="#" class="icoTwitter twitter-share"
-                                                                              title="Twitter"><i
-                                                                                    class="fa fa-twitter"></i></a>
-                                                                  </li>
-                                                                  <li><a href="#" class="icoLinkedin in-share"
-                                                                              title="Linkedin"><i
-                                                                                    class="fa fa-linkedin"></i></a>
-                                                                  </li>
-                                                            </ul>
-                                                      </div>
-                                                       -->
                                                       <div class="post-content ms-0">
                                                             <p class="text-justify text-lg-4 mt-4 mb-4"><span
                                                                         class="font-weight-normal text-lg-8">R</span>eactJS
@@ -530,34 +494,12 @@
                               </div>
                         </div>
                   </div>
-                  <!-- footer component -->
-                  <div id='footer'></div>
-                  <!-- footer component -->
 
                   <!-- Vendor -->
                   <script src="assets/vendor/jquery/jquery.min.js"></script>
-                  <script src="assets/vendor/jquery.appear/jquery.appear.min.js"></script>
-                  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-                  <script src="assets/vendor/jquery.cookie/jquery.cookie.min.js"></script>
                   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-                  <script src="assets/vendor/jquery.validation/jquery.validate.min.js"></script>
-                  <script src="assets/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script>
-                  <script src="assets/vendor/jquery.gmap/jquery.gmap.min.js"></script>
-                  <script src="assets/vendor/lazysizes/lazysizes.min.js"></script>
-                  <script src="assets/vendor/isotope/jquery.isotope.min.js"></script>
-                  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-                  <script src="assets/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
-                  <script src="assets/vendor/vide/jquery.vide.min.js"></script>
-                  <script src="assets/vendor/vivus/vivus.min.js"></script>
-
-                  <script src="assets/vendor/bootstrap-star-rating/js/star-rating.min.js"></script>
-                  <script src="assets/vendor/bootstrap-star-rating/themes/krajee-fas/theme.min.js"></script>
                   <!-- Theme Base, Components and Settings -->
                   <script src="assets/js/theme.js"></script>
-
-                  <script src="assets/js/views/view.contact.js"></script>
-                  <!-- Social Sharing for blogs -->
-                  <script src="assets/layouts/social-sharing.js"></script>
 
                   <!-- Theme Initialization Files -->
                   <script src="assets/js/theme.init.js"></script>
