--- a/public/10-reasons-to-choose-reactJS-for-enterprise-applications.html
+++ b/public/10-reasons-to-choose-reactJS-for-enterprise-applications.html
@@ -302,7 +302,11 @@
                                                                   and open-supply frameworks to layout dynamic user
                                                                   interfaces is Facebook’s ReactJS.</p>
                                                             <p class="text-justify text-lg-4 mt-4 mb-4">
-                                                                  ReactJS got here into life in <span class="text-color-dark font-weight-semibold">2011</span> by <span class="text-color-success font-weight-semibold">Jordan Walke</span> 
+                                                                  ReactJS got here into life in <span
+                                                                        class="text-color-dark font-weight-semibold">2011</span>
+                                                                  by <span
+                                                                        class="text-color-success font-weight-semibold">Jordan
+                                                                        Walke</span>
                                                                   one of the Facebook’s software program engineers.
                                                                   This library is pretty efficient, declarative, and
                                                                   gives reusable modules. The developer network loves
@@ -583,7 +587,8 @@
                                                                   Overflow to restore the issues. On Github, React has
                                                                   <span class="text-color-dark">151007</span>
                                                                   stargazers, which simply suggests the large network
-                                                                  aid for this framework.</p>
+                                                                  aid for this framework.
+                                                            </p>
                                                             <h6 id="Elevate"
                                                                   class="font-weight-semibold text-lg-5 mt-3">
                                                                   <i
