--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Iyrix Tech at ISE2022, and IOTSWC2022</title>
+    <title>Iyrix Tech</title>
 
     <meta name="Description" content=" ">
     <meta name="author" content="Reactify">
