--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Iyrix</title>
+    <title>React JS | React JS, a javascript Library </title>
 
     <meta name="Description" content=" ">
     <meta name="author" content="Reactify">
